# tplink-m7350-client

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: status.py
src/tplink_m7350/: __init__.py  cli.py  client.py  codec.py  config.py  status.py
src/tplink_m7350_client/: __init__.py  cli.py  config.py
tests/: test_codec.py  test_config.py  test_status.py
