[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tplink-m7350"
version = "0.1.0"
description = "Experimental client for the TP-Link M7350 local web interface"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Local project" }]
dependencies = []

[project.scripts]
tplink-m7350 = "tplink_m7350.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

