[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tplink-m7350"
version = "0.1.0"
description = "Experimental client for the TP-Link M7350 local web interface"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "stevusprimus" }]
dependencies = ["cryptography>=42"]
keywords = ["tp-link", "tplink", "m7350", "router", "mobile-wifi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "stevusprimus-hassio-addons/tplink-m7350-client"
Repository = "stevusprimus-hassio-addons/tplink-m7350-client"
Issues = "stevusprimus-hassio-addons/tplink-m7350-client/issues"

[project.scripts]
tplink-m7350 = "tplink_m7350.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
